--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300..900&display=swap');
 @import "tailwindcss";
 
+
+
+
+
 :root {
-  --background: #ffffff;
+  --background: #f5f5f5;
   --foreground: #171717;
+
+
+  --gridstrokedark: #e6e3e3;
+  --gridstrokelight: #e6e3e3;
+
+  --font-sans: "Sansation", sans-serif;
+  --font-mono: "Sansita Swashed", sans-serif; /* Example, using a fallback font */
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+
+
+    --gridstrokedark: #171717;
+    --gridstrokelight: #171717;
+
+
+    --font-sans: "Sansation", sans-serif;
+    --font-mono: "Sansita Swashed", sans-serif; /* Example, using a fallback font */
   }
 }
 
@@ -23,4 +44,27 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
+
+.grid-background {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(50px, 1fr)); /* Creates flexible columns */
+            grid-template-rows: repeat(auto-fill, minmax(50px, 1fr));    /* Creates flexible rows */
+            background-image: linear-gradient(to right, var(--gridstrokedark) 1px, transparent 1px),
+                              linear-gradient(to bottom, var(--gridstrokelight) 1px, transparent 1px);
+            background-size: 50px 50px; /* The size of each box in the grid */
+            object-fit: cover;  /* Ensures the image covers the container */
+            clip-path: circle(40%);  /* Clips the image into a circle */
 }
